--- a/vue条件渲染.html
+++ b/vue条件渲染.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div id="exam-1">
-        <h1>v-if<possible</p>
+        <h1>v-if</h1>
+        <p v-if="ok">something   is   possible</p>
         <code>在 Console 里设置 `vm.ok = true` 即可显示 </code>
         <button onclick="vm.ok=true">显示</button>
         <button onclick="vm.ok=false">隐藏</button>
